--- a/style.css
+++ b/style.css
@@ -1,36 +1,64 @@
 body {
-    text-align: center;
+    margin: 0;
+    overflow: hidden; /* Prevent default body overflow */
 }
+
 #container {
-    max-width: 100%;
-    max-height: 100%;
-    position: fixed;
+    position: relative;
+    width: 100%;
+    height: 100vh; /* Use 100% of the viewport height */
 }
+
+#video {
+    width: 100%;
+    height: 100%;
+    object-fit: cover; /* Ensure the video covers the entire container */
+}
+
 #logo1 {
-    box-sizing: border-box;
-    max-width: 50%;
-    max-height: 30%;
-    height: auto;
-    /* margin-bottom: 10px; */
-    margin-top:18%;
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    max-width: 50%; /* Adjusted for smaller screens */
+    max-height: 100%;
 }
 
-#buttonContainer {
-    display: flex;
-    justify-content: center;
+#button {
+    position: absolute;
+    top: 60%;
+    left: 44%;
+  
+    width: 12%; /* Adjusted for smaller screens */
+    height: 10;
 }
 
-#button1, #button2 {
-    margin: 0 10px;
-    padding: 10px 20px;
-    font-size: 16px;
-    cursor: pointer;
-    display: flex;
-    align-items: center;
+#button:hover {
+    transform: scale(1.2); /* Increase size on hover */
 }
 
-#button1 img, #button2 img {
-    margin-right: 10px;
-    max-width: 24px; /* Adjust the size as needed */
-    height: auto;
+@media (max-width: 768px) {
+    /* Adjustments for smaller screens (phones) */
+    #logo1 {
+        top: 30%; /* Adjusted top position */
+        max-width: 50%; /* Adjusted max-width */
+    }
+
+    #button {
+        
+        top: 50%; /* Adjusted top position */
+        width: 12%; /* Adjusted width */
+    }
+}
+@media (max-width: 480px) {
+    #logo1 {
+        top: 30%; /* Adjusted top position */
+        max-width: 90%; /* Adjusted max-width */
+    }
+
+    #button {
+        left: 15%;
+        top: 50%; /* Adjusted top position */
+        width: 70%; /* Adjusted width */
+    }
 }
